changed to mdashes

--- a/food.html
+++ b/food.html
@@ -35,94 +35,94 @@
           <h5>Campustown</h5>
 	  <h6>Distance from Illini Union: 5-15 minutes walking or 2-4 stops on the 5W or 50W Green bus (free!)</h6>
 	    <br>
-	    <b>Mia Za's</b> - Customizable pizza, pasta, and sandwiches.<br>
-	    <b>Shawarma Joint</b> - Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
-	    <b>Midsummer Lounge</b> - Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
-            <b>Teamoji</b> - Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
-	    <b>Cocomero</b> - Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
-	    <b>Cravings</b> - Chinese fast food. Great value for money. Closed Sundays.<br>
-	    <b>Spoon House Korean Kitchen</b> - Classic Korean dishes with some Korean-Mexican fusion options.<br>
-	    <b>Latea Bubble Tea Lounge</b> - Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
-	    <b>Poke Lab</b> - Build your own poke bowls.<br>
-	    <b>GG Bowl</b> - Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
-	    <b>Szechuan Taste</b> - Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
-	    <b>Evo Cafe</b> - Szechuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
-	    <b>Asian Taste</b> - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken. Closed Sundays.<br>
-	    <b>Fat Sandwich Company</b> - As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
-	    <b>Signature Grill</b> - Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
-	    <b>Bangkok Thai Restaurant and Pho 911</b> - Classic Thai dishes and pho. Great value for money.<br>
-	    <b>Brewlab</b> - Local hip coffee shop.<br>
-	    <b>Sakanaya</b> - Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance. Typically only open for dinner, but also has lunch hours on Saturday.<br>
-	    <b>Northern Cuisine</b> - Amazing Chinese food from the northeastern (Dongbei) region. Better to go with a group.<br>
-	    <b>Jurassic Grill</b> - Typical burger joint with a hidden empanada menu.<br>
-	    <b>Sushi Man</b> - Good sushi restaurant. Better for takeout as there's not as much seating.<br>
-	    <b>Naya Indian Cuisine</b> - Really good northern style Indian food.<br>
-	    <b>Moment Bakery</b> - Chinese-style bakery with amazing pastries, breads, and cakes. Closed Sundays.<br>
-	    <b>Tanaka Ramen and Izakaya</b> - Decent ramen and other Japanese classics. Closed Sundays.<br>
-	    <b>Maize Mexican Grill</b> - A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
+	    <b>Mia Za's</b> &mdash; Customizable pizza, pasta, and sandwiches.<br>
+	    <b>Shawarma Joint</b> &mdash; Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
+	    <b>Midsummer Lounge</b> &mdash; Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
+            <b>Teamoji</b> &mdash; Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
+	    <b>Cocomero</b> &mdash; Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
+	    <b>Cravings</b> &mdash; Chinese fast food. Great value for money. Closed Sundays.<br>
+	    <b>Spoon House Korean Kitchen</b> &mdash; Classic Korean dishes with some Korean-Mexican fusion options.<br>
+	    <b>Latea Bubble Tea Lounge</b> &mdash; Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
+	    <b>Poke Lab</b> &mdash; Build your own poke bowls.<br>
+	    <b>GG Bowl</b> &mdash; Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
+	    <b>Szechuan Taste</b> &mdash; Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
+	    <b>Evo Cafe</b> &mdash; Szechuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
+	    <b>Asian Taste</b> &mdash; Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken. Closed Sundays.<br>
+	    <b>Fat Sandwich Company</b> &mdash; As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
+	    <b>Signature Grill</b> &mdash; Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
+	    <b>Bangkok Thai Restaurant and Pho 911</b> &mdash; Classic Thai dishes and pho. Great value for money.<br>
+	    <b>Brewlab</b> &mdash; Local hip coffee shop.<br>
+	    <b>Sakanaya</b> &mdash; Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance. Typically only open for dinner, but also has lunch hours on Saturday.<br>
+	    <b>Northern Cuisine</b> &mdash; Amazing Chinese food from the northeastern (Dongbei) region. Better to go with a group.<br>
+	    <b>Jurassic Grill</b> &mdash; Typical burger joint with a hidden empanada menu.<br>
+	    <b>Sushi Man</b> &mdash; Good sushi restaurant. Better for takeout as there's not as much seating.<br>
+	    <b>Naya Indian Cuisine</b> &mdash; Really good northern style Indian food.<br>
+	    <b>Moment Bakery</b> &mdash; Chinese-style bakery with amazing pastries, breads, and cakes. Closed Sundays.<br>
+	    <b>Tanaka Ramen and Izakaya</b> &mdash; Decent ramen and other Japanese classics. Closed Sundays.<br>
+	    <b>Maize Mexican Grill</b> &mdash; A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
 	    <br>
           <h5>Krannert Area</h5>
 	  <h6>Distance from Illini Union: 10 minutes walking</h6>
 	    <br>
-	    <b>The Bread Company</b> - European-style cafe with fresh baked bread daily. Great sandwiches during weekday lunch hours and upscale pizza, pasta, and small plates weeknights and Saturday nights. Closed Sundays.</br>
-	    <b>Manolo's Pizza and Empanadas</b> - New York style pizza by the slice and empanadas (both sweet and savory). Better for takeout as there's not much seating. Closed Sundays.<br>
-	    <b>Dubai Grill</b> - Like Shawarma Joint.<br>
-	    <b>Bab Plus</b> - Classic Korean food. Closed Sundays.<br>
-	    <b>Caffe Paradiso</b> - Sandwiches, coffee, and desserts. Obama visited once.<br>
+	    <b>The Bread Company</b> &mdash; European-style cafe with fresh baked bread daily. Great sandwiches during weekday lunch hours and upscale pizza, pasta, and small plates weeknights and Saturday nights. Closed Sundays.</br>
+	    <b>Manolo's Pizza and Empanadas</b> &mdash; New York style pizza by the slice and empanadas (both sweet and savory). Better for takeout as there's not much seating. Closed Sundays.<br>
+	    <b>Dubai Grill</b> &mdash; Like Shawarma Joint.<br>
+	    <b>Bab Plus</b> &mdash; Classic Korean food. Closed Sundays.<br>
+	    <b>Caffe Paradiso</b> &mdash; Sandwiches, coffee, and desserts. Obama visited once.<br>
 	    <br>
 	  <h5>Close to campus but not quite off campus</h5>
 	  <h6>Distance from Illini Union: within 15 minutes walking or a few stops on bus (free!)</h6>
 	    <br>
-	    <b>Lao Sze Chuan Chinese Restaurant</b> - Chinese restaurant with mostly Szechuan-style dishes (as the name might suggest).<br>
-	    <b>Bakelab</b> - Amazing croissants and other pastries (also sold at Brewlab).<br>
+	    <b>Lao Sze Chuan Chinese Restaurant</b> &mdash; Chinese restaurant with mostly Szechuan-style dishes (as the name might suggest).<br>
+	    <b>Bakelab</b> &mdash; Amazing croissants and other pastries (also sold at Brewlab).<br>
 	    <br>
 	  <h5>Downtown Urbana (and area a little further out)</h5>
 	  <h6>Distance from Illini Union: a few stops on 10E Gold (weekdays only), 5 or 50E Green, 13 or 130N Silver (free one-way, fare required on the way back), or 5 minutes drive</h6>
 	    <br>
-	    <b>Courier Cafe</b> - Classic American diner with meals made from scratch daily.<br>
-	    <b>Rick's Bakery</b> - Local bakery selling freshly made breads, pastries, and sweets. Also have some lunch offerings including burritos and tamales. Closed Sundays.<br>
-	    <b>Siam Terrace</b> - Thai classics. Checkout their specials menu.<br>
-	    <b>El Paraiso</b> - Latin American food including dishes like Mofongo, Jibarito, and pupusas. Closed Sundays.<br>
-	    <b>Encanto Restaurant and Bar</b> - Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
-	    <b>Baldarotta's</b> - Porketta sandwiches. Don't sleep on the fries (and add malt vinegar). On weekends, only open for lunch.<br>
-	    <b>RegCakes</b> - Gluten-free bakery. Closed Sundays.<br>
-	    <b>Broadway Food Hall</b> - Upscale cafeteria-style with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack. Closed Sundays.<br>
-            <b>Xinh Xinh Cafe</b> - Great pho and summer rolls. Closed Sundays.<br>
-            <b>El Oasis</b> - Mexican-style ice cream.<br>
-	    <b>Panaderia San Miguel Mexican Bakery</b> - Mexican-style bakery (as the name might suggest).<br>
-	    <b>La Mixteca</b> - Classic Mexican restaurant. Decent birria tacos.<br>
+	    <b>Courier Cafe</b> &mdash; Classic American diner with meals made from scratch daily.<br>
+	    <b>Rick's Bakery</b> &mdash; Local bakery selling freshly made breads, pastries, and sweets. Also has some lunch offerings including burritos and tamales. Closed Sundays.<br>
+	    <b>Siam Terrace</b> &mdash; Thai classics. Checkout their specials menu.<br>
+	    <b>El Paraiso</b> &mdash; Latin American food including dishes like Mofongo, Jibarito, and pupusas. Closed Sundays.<br>
+	    <b>Encanto Restaurant and Bar</b> &mdash; Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
+	    <b>Baldarotta's</b> &mdash; Porketta sandwiches. Don't sleep on the fries (and add malt vinegar). On weekends, only open for lunch.<br>
+	    <b>RegCakes</b> &mdash; Gluten-free bakery. Closed Sundays.<br>
+	    <b>Broadway Food Hall</b> &mdash; Upscale food hall with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack. Closed Sundays.<br>
+            <b>Xinh Xinh Cafe</b> &mdash; Great pho and summer rolls. Closed Sundays.<br>
+            <b>El Oasis</b> &mdash; Mexican-style ice cream.<br>
+	    <b>Panaderia San Miguel Mexican Bakery</b> &mdash; Mexican-style bakery (as the name might suggest).<br>
+	    <b>La Mixteca</b> &mdash; Classic Mexican restaurant. Decent birria tacos.<br>
 	    <br>
 	  <h5>Downtown Champaign (and area a little further south on Neil)</h5>
 	  <h6>Distance from Illini Union: a few stops on 5 or 50W Green, 12 or 120W Teal, 1 or 100 N Yellow, or 2 or 20N Red (free one-way, fare required on the way back), or &lt; 10 minutes drive</h6>
 	    <br>
-	    <b>Pizzeria Antica</b> - Upscale pizza certified authentic by the City of Naples. Closed Sundays.<br>
-	    <b>Maize at the Station</b> - Same as Maize on Green St but a larger menu and sitdown.<br>
-	    <b>Heavy Spoon Co</b> - Ice cream mixed with classic, nostalgic breakfast cerals.<br>
-	    <b>Nando Milano</b> - Fancy Italian. On weekends, open for late lunch and dinner.<br>
-            <b>Watson's Shack and Rail</b> — Great local fried chicken restaurant. Offers brunch on Sundays.<br>
-            <b>Black Dog</b> — Local BBQ joint.<br>
-	    <b>Himalayan Chimney</b> — Sitdown Indian restaurant.<br>
-	    <b>Jupiter's Pizzeria</b> - Crispy thin crust pizza.<br>
-	    <b>La Bahia</b> - Mexican-style seafood.<br>
-	    <b>Tasty Tart</b> - Amazing individual-sized shortcrust pastries. They close when they sell out!<br>
-	    <b>Afghan Cuisine Restaurant</b> - Amazing Afghani food. Might have long waits as they recently opened at this location. Closed Sundays.<br>
-            <b>Pekara</b> — Cafe serving classic breakfast and lunch items with pastries made fresh daily.<br>
+	    <b>Pizzeria Antica</b> &mdash; Upscale pizza certified authentic by the City of Naples. Closed Sundays.<br>
+	    <b>Maize at the Station</b> &mdash; Same as Maize on Green St but a larger menu and sitdown.<br>
+	    <b>Heavy Spoon Co</b> &mdash; Ice cream mixed with classic, nostalgic breakfast cerals.<br>
+	    <b>Nando Milano</b> &mdash; Fancy Italian. On weekends, open for late lunch and dinner.<br>
+            <b>Watson's Shack and Rail</b> &mdash; Great local fried chicken restaurant. Offers brunch on Sundays.<br>
+            <b>Black Dog</b> &mdash; Local BBQ joint.<br>
+	    <b>Himalayan Chimney</b> &mdash; Sitdown Indian restaurant.<br>
+	    <b>Jupiter's Pizzeria</b> &mdash; Crispy thin crust pizza.<br>
+	    <b>La Bahia</b> &mdash; Mexican-style seafood.<br>
+	    <b>Tasty Tart</b> &mdash; Amazing individual-sized shortcrust pastries. They close when they sell out!<br>
+	    <b>Afghan Cuisine Restaurant</b> &mdash; Amazing Afghani food. Might have long waits as they recently opened at this location. Closed Sundays.<br>
+            <b>Pekara</b> &mdash; Cafe serving classic breakfast and lunch items with pastries made fresh daily.<br>
 	    <br>
 	  <h5>Further down south on Neil</h5>
 	  <h6>Distance from Illini Union: a few stops on 1 or 100S Yellow (free one-way, fare required on the way back), or 10 minutes drive</h6>
 	    <br>
-	    <b>Lanxang Thai-Lao Cuisine</b> - Thai classics. Closed Sundays.<br>
-	    <b>Ishi Sushi and Kaori's oven</b> - Affordable and really good quality omakase (call in advance for availability) and amazing Japanese-style cakes and pastries (weekdays or order ahead for pickup).<br>
-	    <b>Jarling's Custard Cup</b> - Local favorite for frozen custard and concrete mixers.<br>
-	    <b>Moki Sushi</b> - All you can eat sushi. Saturdays open for late lunch and dinner (usually open for lunch and dinner).<br>
+	    <b>Lanxang Thai-Lao Cuisine</b> &mdash; Thai classics. Closed Sundays.<br>
+	    <b>Ishi Sushi and Kaori's oven</b> &mdash; Affordable and really good quality omakase (call in advance for availability) and amazing Japanese-style cakes and pastries (weekdays or order ahead for pickup).<br>
+	    <b>Jarling's Custard Cup</b> &mdash; Local favorite for frozen custard and concrete mixers.<br>
+	    <b>Moki Sushi</b> &mdash; All you can eat sushi. Saturdays open for late lunch and dinner (usually open for lunch and dinner).<br>
 	    <br>
 	  <h5>Far from campus</h5>
 	  <h6>Distance from Illini Union: within 15 minutes drive</h6>
 	    <br>
-	    <b>Cheese and Crackers</b> - Cheese, crackers, European-style deli, and sushi-quality fish (some assembly required). Really good sandwiches. Closed Sundays.<br>
-	    <b>Sun Singer</b> - Sitdown American restaurant, also popular for brunch.<br>
-	    <b>Eighty-Three Vietnamese Cuisine</b> - Vietnamese classic including pho and banh mi. Closed Sundays.<br>
-	    <b>San Maru/</b> - Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
+	    <b>Cheese and Crackers</b> &mdash; Cheese, crackers, European-style deli, and sushi-quality fish (some assembly required). Really good sandwiches. Closed Sundays.<br>
+	    <b>Sun Singer</b> &mdash; Sitdown American restaurant, also popular for brunch.<br>
+	    <b>Eighty-Three Vietnamese Cuisine</b> &mdash; Vietnamese classic including pho and banh mi. Closed Sundays.<br>
+	    <b>San Maru/</b> &mdash; Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
 	    <br>
         </p>
       </div>
