updated buttons to use new transportation-local.html

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		<a class="button button-primary" href="https://docs.google.com/document/d/1BmqCZ4VY-RKNIb-JqNcDkbbes8hwm27MuG31SYsQYEg/edit?usp=sharing">Singles Rules</a>
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 
-        <h6>Miscellaneous</h6>
-        <a class="button button-primary" href="food.html">food!</a>
-        <a class="button button-primary" href="parking.html">Parking</a>
+        <h6>Local Guides</h6>
+        <a class="button button-primary" href="food.html">Food!</a>
+        <a class="button button-primary" href="transportation-local.html">Local Transportation & Parking</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
         <br>
         <a class="button button-primary" href="media/">media</a>
