--- a/transportation-local.html
+++ b/transportation-local.html
@@ -32,7 +32,7 @@
         <h4>Getting around Champaign-Urbana</h4>
           <h5>Public Transit via CU MTD</h5>
 	    The public transit system is great! Here's the basics.
-	    <h6>How do I tell which bus is which?</h6>
+	    <h6><b>How do I tell which bus is which?</b></h6>
 	      Routes have an associated number, color, and direction. For example, the 5W Green or 13N Silver (also referred to by just the number or color).
 	    <h6>When do buses change schedules/frequency?</h6>
 	      Nighttime and weekend routes run less frequently than weekday routes and have an added "0" to the number. For example, the 50W Green or 130N Silver.
@@ -40,12 +40,14 @@
 	      CU MTD recently integrated with Google Maps for real-time updates. Bus stops also have a stop code that you can text to <a href="tel:35890">35890</a> to get updates. The Transit App (<a href="https://apps.apple.com/us/app/transit-subway-bus-times/id498151501">Apple Store</a> | <a href="https://play.google.com/store/apps/details?id=com.thetransitapp.droid&hl=en_US&gl=US">Google Play</a>) is also popular, and the <a href="https://mtd.org/maps-and-schedules/bus-stops/">CU MTD Website</a> also has a stop lookup feature (under "Designated Stops").
 	    <h6>How much does it cost to take the bus?</h6>
 	    Bus fares are $1 one-way and includes one transfer (ask the driver for a transfer slip when boarding). Pay with cash or use the <a href="https://mtd.org/riding/token-transit/">Token Transit App</a>. <i><b>However</b></i>, all bus stops near or on campus (and a few further out) are free! Look for an orange bus stop sign or signage saying "This is an iStop." At these stops, you can board from any (open) door on the bus. See CU MTD's <a href="https://mtd.org/media/3580/istop-map.png">iStop Map</a> for the locations of these stops.
+	    <br>
 	  <h5>Parking near Illini Union</h5>
-	    Parking on-campus is a pain. Many areas around campus use meters. You can pay in cash or use the <a href=https://mobilemeter.ppprk.com/park/">Mobile Meter App</a> (also available via <a href="https://apps.apple.com/us/app/mobilemeter/id948398747">App Store</a> | <a href="https://play.google.com/store/apps/details?id=com.passportparking.mobile.mobilemeter&hl=en_US&gl=US">Google Play</a>).
+	  Parking on-campus is a pain. Many areas around campus use meters. You can pay in cash or use the <a href=https://mobilemeter.ppprk.com/park/">Mobile Meter App</a> (also available via <a href="https://apps.apple.com/us/app/mobilemeter/id948398747">App Store</a> | <a href="https://play.google.com/store/apps/details?id=com.passportparking.mobile.mobilemeter&hl=en_US&gl=US">Google Play</a>). The City of Champaign has a very detailed and interactive <a href=https://cityofchampaign.maps.arcgis.com/apps/webappviewer/index.html?id=7525441df3664018bebe847837450c6a">map</a> of where parking meters are located, how much they cost, how long you can park, etc.
 
 	    On weekdays, many parking lots become free after 5 PM.
 
-	    On weekends, the following lots are free and &lt;15 minutes walking from Illini Union (listed by closest to furtherst): B1, C9, D9, B4, B17. On weekends, the following lots are free and within a few free bus stops: F29, F28, E14, F23.
+	    On weekends, the following lots are free and &lt;15 minutes walking from Illini Union (listed by closest to furtherst): B1, C9, D9, B4, B17. On weekends, the following lots are free and within a few free bus stops: F29, F28, E14, F23. See UIUC's <a href="https://www.parking.illinois.edu/sites/default/files/inline-files/parking-map-pdf.pdf">Campus Parking Map</a> for more details.
+	    <br>
 	  <h5>Parking off-campus</h5>
 	    The residential Urbana area directly east of campus (past Lincoln Ave) has lots of free street parking. Just be wary as some streets only allow parking on one side. Downside is you'll obviously need to walk farther to Illini Union. If you park close to Lincoln Ave, you may be able catch the 22N or 220N Illini for a few free stops. If you park close to Green Street further down the Urbana side, you may be able to catch the 5W or 50W Green (but you'll have to pay the fare to get to Illini Union).
       </div>
