--- a/transportation-local.html
+++ b/transportation-local.html
@@ -30,15 +30,16 @@
     <div class="row">
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Getting around Champaign-Urbana</h4>
+	<p>
           <h5>Public Transit via CU MTD</h5>
 	    The public transit system is great! Here's the basics.
 	    <h6><b>How do I tell which bus is which?</b></h6>
 	      Routes have an associated number, color, and direction. For example, the 5W Green or 13N Silver (also referred to by just the number or color).
-	    <h6>When do buses change schedules/frequency?</h6>
+	    <h6><b>When do buses change schedules/frequency?</b></h6>
 	      Nighttime and weekend routes run less frequently than weekday routes and have an added "0" to the number. For example, the 50W Green or 130N Silver.
-	    <H6>How can I tell when my bus is arriving?</h6>
+	    <h6><b>How can I tell when my bus is arriving?</b></h6>
 	      CU MTD recently integrated with Google Maps for real-time updates. Bus stops also have a stop code that you can text to <a href="tel:35890">35890</a> to get updates. The Transit App (<a href="https://apps.apple.com/us/app/transit-subway-bus-times/id498151501">Apple Store</a> | <a href="https://play.google.com/store/apps/details?id=com.thetransitapp.droid&hl=en_US&gl=US">Google Play</a>) is also popular, and the <a href="https://mtd.org/maps-and-schedules/bus-stops/">CU MTD Website</a> also has a stop lookup feature (under "Designated Stops").
-	    <h6>How much does it cost to take the bus?</h6>
+	    <h6><b>How much does it cost to take the bus?</b></h6>
 	    Bus fares are $1 one-way and includes one transfer (ask the driver for a transfer slip when boarding). Pay with cash or use the <a href="https://mtd.org/riding/token-transit/">Token Transit App</a>. <i><b>However</b></i>, all bus stops near or on campus (and a few further out) are free! Look for an orange bus stop sign or signage saying "This is an iStop." At these stops, you can board from any (open) door on the bus. See CU MTD's <a href="https://mtd.org/media/3580/istop-map.png">iStop Map</a> for the locations of these stops.
 	    <br>
 	  <h5>Parking near Illini Union</h5>
@@ -50,6 +51,7 @@
 	    <br>
 	  <h5>Parking off-campus</h5>
 	    The residential Urbana area directly east of campus (past Lincoln Ave) has lots of free street parking. Just be wary as some streets only allow parking on one side. Downside is you'll obviously need to walk farther to Illini Union. If you park close to Lincoln Ave, you may be able catch the 22N or 220N Illini for a few free stops. If you park close to Green Street further down the Urbana side, you may be able to catch the 5W or 50W Green (but you'll have to pay the fare to get to Illini Union).
+	  </p>
       </div>
     </div>
   </div>
