falta una letra

--- a/food.html
+++ b/food.html
@@ -97,7 +97,7 @@
 	    <br>
 	    <b>Pizzeria Antica</b> &mdash; Upscale pizza certified authentic by the City of Naples. Closed Sundays.<br>
 	    <b>Maize at the Station</b> &mdash; Same as Maize on Green St but a larger menu and sitdown.<br>
-	    <b>Heavy Spoon Co</b> &mdash; Ice cream mixed with classic, nostalgic breakfast cerals.<br>
+	    <b>Heavy Spoon Co</b> &mdash; Ice cream mixed with classic, nostalgic breakfast cereals.<br>
 	    <b>Nando Milano</b> &mdash; Fancy Italian. On weekends, open for late lunch and dinner.<br>
             <b>Watson's Shack and Rail</b> &mdash; Great local fried chicken restaurant. Offers brunch on Sundays.<br>
             <b>Black Dog</b> &mdash; Local BBQ joint.<br>
