added off-semester note for CU MTD frequency

--- a/transportation-local.html
+++ b/transportation-local.html
@@ -35,7 +35,7 @@
 	    <h6><b>How do I tell which bus is which?</b></h6>
 	      Routes have an associated number, color, and direction. For example, the 5W Green or 13N Silver (also referred to by just the number or color).
 	    <h6><b>When do buses change schedules/frequency?</b></h6>
-	      Nighttime and weekend routes run less frequently than weekday routes and have an added "0" to the number. For example, the 50W Green or 130N Silver.
+	      Routes in general run less frequently when the university is not in session, which will usually include when RIP is held. Nighttime and weekend routes run less frequently than weekday routes and have an added "0" to the number. For example, the 50W Green or 130N Silver.
 	    <h6><b>How can I tell when my bus is arriving?</b></h6>
 	      CU MTD recently integrated with Google Maps for real-time updates. Bus stops also have a stop code that you can text to <a href="tel:35890">35890</a> to get updates. The Transit App (<a href="https://apps.apple.com/us/app/transit-subway-bus-times/id498151501">Apple Store</a> | <a href="https://play.google.com/store/apps/details?id=com.thetransitapp.droid&hl=en_US&gl=US">Google Play</a>) is also popular, and the <a href="https://mtd.org/maps-and-schedules/bus-stops/">CU MTD Website</a> also has a stop lookup feature (under "Designated Stops").
 	    <h6><b>How much does it cost to take the bus?</b></h6>
