--- a/food.html
+++ b/food.html
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Fooooooood</h4>
-        <p>We have an amazing food scene in Champaign-Urbana! In this list, restaurants are grouped by location (from nearest to farthest) with transportation options. This list is not exhaustive but is intended to highlight local businesses. There should be plenty of options for your stay during RIP. See the local transportation page (coming soon!) for a description of the local area and transportation options).</p>
+	<p>We have an amazing food scene in Champaign-Urbana! In this list, restaurants are grouped by location (from nearest to farthest) with transportation options. This list is not exhaustive but is intended to highlight local businesses. There should be plenty of options for your stay during RIP. See the <a href="https://rip.ddrillini.club/transportation-local.html">Local Transportation</a> page for more details on the transportation options.</p>
           <h5>Campustown</h5>
 	  <h6>Distance from Illini Union: 5-15 minutes walking or 2-4 stops on the 5W or 50W Green bus (free!)</h6>
 	    <p>
