added paris super crepes

--- a/food.html
+++ b/food.html
@@ -44,6 +44,7 @@
 	    <b>Latea Bubble Tea Lounge</b> &mdash; Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
 	    <b>Poke Lab</b> &mdash; Build your own poke bowls.<br>
 	    <b>GG Bowl</b> &mdash; Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
+	    <b>Paris Super Crepes</b> &mdash; Sweet and savory crepes and other snack items.<br>
 	    <b>Szechuan Taste</b> &mdash; Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
 	    <b>Evo Cafe</b> &mdash; Szechuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
 	    <b>Asian Taste</b> &mdash; Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken. Closed Sundays.<br>
