added sticky rice

--- a/food.html
+++ b/food.html
@@ -104,6 +104,7 @@
 	    <b>Himalayan Chimney</b> &mdash; Sitdown Indian restaurant.<br>
 	    <b>Jupiter's Pizzeria</b> &mdash; Crispy thin crust pizza.<br>
 	    <b>La Bahia</b> &mdash; Mexican-style seafood.<br>
+	    <b>Sticky Rice</b> &mdash; Lao-Thai food, and actual sticky rice!<br>
 	    <b>Tasty Tart</b> &mdash; Amazing individual-sized shortcrust pastries. They close when they sell out!<br>
 	    <b>Afghan Cuisine Restaurant</b> &mdash; Amazing Afghani food. Might have long waits as they recently opened at this location. Closed Sundays.<br>
             <b>Pekara</b> &mdash; Cafe serving classic breakfast and lunch items with pastries made fresh daily.<br>
