updated szechuan to sichuan

--- a/food.html
+++ b/food.html
@@ -46,7 +46,7 @@
 	    <b>GG Bowl</b> &mdash; Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
 	    <b>Paris Super Crepes</b> &mdash; Sweet and savory crepes and other snack items.<br>
 	    <b>Szechuan Taste</b> &mdash; Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
-	    <b>Evo Cafe</b> &mdash; Szechuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
+	    <b>Evo Cafe</b> &mdash; Really good Sichuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
 	    <b>Asian Taste</b> &mdash; Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken. Closed Sundays.<br>
 	    <b>Fat Sandwich Company</b> &mdash; As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
 	    <b>Signature Grill</b> &mdash; Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
@@ -54,6 +54,7 @@
 	    <b>Brewlab</b> &mdash; Local hip coffee shop.<br>
 	    <b>Sakanaya</b> &mdash; Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance. Typically only open for dinner, but also has lunch hours on Saturday.<br>
 	    <b>Northern Cuisine</b> &mdash; Amazing Chinese food from the northeastern (Dongbei) region. Better to go with a group.<br>
+	    <b>Chong Qing House</b> &mdash; Really good Sichuan/Chongqing-style food (as the name might suggest). Similar to Evo Cafe with some variations on dishes. Better to go with a group.<br>
 	    <b>Jurassic Grill</b> &mdash; Typical burger joint with a hidden empanada menu.<br>
 	    <b>Sushi Man</b> &mdash; Good sushi restaurant. Better for takeout as there's not as much seating.<br>
 	    <b>Naya Indian Cuisine</b> &mdash; Really good northern style Indian food.<br>
@@ -73,7 +74,7 @@
 	  <h5>Close to campus but not quite off campus</h5>
 	  <h6>Distance from Illini Union: within 15 minutes walking or a few stops on bus (free!)</h6>
 	    <br>
-	    <b>Lao Sze Chuan Chinese Restaurant</b> &mdash; Chinese restaurant with mostly Szechuan-style dishes (as the name might suggest).<br>
+	    <b>Lao Sze Chuan Chinese Restaurant</b> &mdash; More upscale Chinese restaurant with mostly Sichuan-style dishes (as the name might suggest).<br>
 	    <b>Bakelab</b> &mdash; Amazing croissants and other pastries (also sold at Brewlab).<br>
 	    <br>
 	  <h5>Downtown Urbana (and area a little further out)</h5>
