--- a/food.html
+++ b/food.html
@@ -91,7 +91,8 @@
             <b>Xinh Xinh Cafe</b> &mdash; Great pho and summer rolls. Closed Sundays.<br>
             <b>El Oasis</b> &mdash; Mexican-style ice cream.<br>
 	    <b>Panaderia San Miguel Mexican Bakery</b> &mdash; Mexican-style bakery (as the name might suggest).<br>
-	    <b>La Mixteca</b> &mdash; Classic Mexican restaurant. Decent birria tacos.<br>
+	    <b>La Mixteca</b> &mdash; Classic Mexican restaurant.<br>
+	    <b>Los Paisas</b> &mdash; Great birria tacos.<br>
 	    </p>
 	  <h5>Downtown Champaign (and area a little further south on Neil)</h5>
 	  <h6>Distance from Illini Union: a few stops on 5 or 50W Green, 12 or 120W Teal, 1 or 100 N Yellow, or 2 or 20N Red (free one-way, fare required on the way back), or &lt; 10 minutes drive</h6>
@@ -125,7 +126,8 @@
 	    <b>Cheese and Crackers</b> &mdash; Cheese, crackers, European-style deli, and sushi-quality fish (some assembly required). Really good sandwiches. Closed Sundays.<br>
 	    <b>Sun Singer</b> &mdash; Sitdown American restaurant, also popular for brunch.<br>
 	    <b>Eighty-Three Vietnamese Cuisine</b> &mdash; Vietnamese classic including pho and banh mi. Closed Sundays.<br>
-	    <b>San Maru/</b> &mdash; Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
+	    <b>San Maru</b> &mdash; Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
+	    <b>Los Hidalguense Taco Truck</b> &mdash; Amazing al pastor tacos.
 	    </p>
       </div>
     </div>
