--- a/transportation-local.html
+++ b/transportation-local.html
@@ -41,6 +41,9 @@
 	    <h6><b>How much does it cost to take the bus?</b></h6>
 	    Bus fares are $1 one-way and includes one transfer (ask the driver for a transfer slip when boarding). Pay with cash or use the <a href="https://mtd.org/riding/token-transit/">Token Transit App</a>. <i><b>However</b></i>, all bus stops near or on campus (and a few further out) are free! Look for an orange bus stop sign or signage saying "This is an iStop." At these stops, you can board from any (open) door on the bus. See CU MTD's <a href="https://mtd.org/media/3580/istop-map.png">iStop Map</a> for the locations of these stops.<br>
 	    <br>
+	  <h5>Uber/Lyft</h5>
+	    We do have Uber and Lyft service in the area. Uber tends to be more readily available.<br>
+	    <br>
 	  <h5>Parking near Illini Union</h5>
 	    Parking on-campus is a pain. Many areas around campus use meters. You can pay in cash or use the <a href=https://mobilemeter.ppprk.com/park/">Mobile Meter App</a> (also available via <a href="https://apps.apple.com/us/app/mobilemeter/id948398747">App Store</a> | <a href="https://play.google.com/store/apps/details?id=com.passportparking.mobile.mobilemeter&hl=en_US&gl=US">Google Play</a>). The City of Champaign has a very detailed and interactive <a href=https://cityofchampaign.maps.arcgis.com/apps/webappviewer/index.html?id=7525441df3664018bebe847837450c6a">map</a> of where parking meters are located, how much they cost, how long you can park, etc. (this is likely most helpful for the campustown area directly west of campus).<br>
 	    <br>
