added nissan rental

--- a/transportation-local.html
+++ b/transportation-local.html
@@ -45,7 +45,8 @@
 	    We do have Uber and Lyft service in the area. Uber tends to be more readily available.<br>
 	    <br>
 	  <h5>Car Rental</h5>
-	    <a href="https://www.enterprise.com/en/car-rental-locations/us/il/champaign-n-prospect-ave-6201.html">Enterprise</a> and <a href="https://www.hertz.com/rentacar/location/unitedstates/illinois/champaign/CMIC02">Hertz</a> have locations in the northwest side of Champaign. We also have a few <a href="https://my.zipcar.com/search">Zipcars</a> around town.
+	    <a href="https://www.enterprise.com/en/car-rental-locations/us/il/champaign-n-prospect-ave-6201.html">Enterprise</a> and <a href="https://www.hertz.com/rentacar/location/unitedstates/illinois/champaign/CMIC02">Hertz</a> have locations in the northwest side of Champaign. We also have a few <a href="https://my.zipcar.com/search">Zipcars</a> around town. Apparently the local <a href="https://www.illininissan.com/rentals/">Nissan Dealer</a> also offers rentals.<br>
+	    <br>
 	  <h5>Parking near Illini Union</h5>
 	    Parking on-campus is a pain. Many areas around campus use meters. You can pay in cash or use the <a href=https://mobilemeter.ppprk.com/park/">Mobile Meter App</a> (also available via <a href="https://apps.apple.com/us/app/mobilemeter/id948398747">App Store</a> | <a href="https://play.google.com/store/apps/details?id=com.passportparking.mobile.mobilemeter&hl=en_US&gl=US">Google Play</a>). The City of Champaign has a very detailed and interactive <a href=https://cityofchampaign.maps.arcgis.com/apps/webappviewer/index.html?id=7525441df3664018bebe847837450c6a">map</a> of where parking meters are located, how much they cost, how long you can park, etc. (this is likely most helpful for the campustown area directly west of campus).<br>
 	    <br>
