added other airports

--- a/transportation-nonlocal.html
+++ b/transportation-nonlocal.html
@@ -30,22 +30,27 @@
     <div class="row">
       <div class="column" style="margin-top: 10%; margin-bottom: 10%">
         <h4>Getting to UIUC</h4>
-	<p>Getting to UIUC is a... time-consuming process. Here are the options, listed roughly in order of convenience and cost. Many of the options assume you will be flying into Illinois (or a neighboring state).</p>
+	  <p>Getting to UIUC is a... time-consuming process. Here are the options, listed roughly in order of convenience and cost. Many of the options assume you will be flying into Illinois (or a neighboring state).</p>
           <h5>From Chicago</h5>
-	    The public transit system is great! Here's the basics.
+	    Flying into or traveling from Chicago has the most options to get to UIUC.
 	    <h6><b>Airports</b></h6>
-	      There are two airports in Chicago: O'Hare International Airport (ORD) and Midway National Airport (MDW). ORD is the larger of the two and typically cheaper, but also usually has longer lines for security and longer distances from security to gates because the ongoing expansion and renovation projects. MDW is the smaller of the two and typically a bit more expensive, but much less busy than ORD and much more comfortable to travel through (and has actually decent food).
+	      There are two airports in Chicago: O'Hare International Airport (ORD) and Midway National Airport (MDW). ORD is the larger of the two and typically cheaper, but also usually has longer lines for security and longer distances from security to gates because the ongoing expansion and renovation projects. MDW is the smaller of the two and typically a bit more expensive, but much less busy than ORD and much more comfortable to travel through (and has actually decent food).<br>
+	      <br>
 	    <h6><b>Airport (or Chicago area) to UIUC</b></h6>
 	      From the airports, there's a few options to get to Champaign:
 	      <ul>
 		<li><b><a href="https://peoriacharter.com/">Peoria Charter</a></b> &mdash; Conveniently picks you up directly from ORD ($43) or MDW ($44). <b>Note:</b> pickups from MDW are <i>much</i> less frequent. If you're staying in Chicago before/after RIP, they also have pickups from Union Station and many suburbs. See their <a href="https://peoriacharter.com/findmystop">Find My Stop</a> for more details on pickup and drop off locations. Sometimes runs late if the bus happens to be going through Chicago during rush hour traffic.</li>
 		<li><b><a href="https://www.amtrak.com/home>Amtrak">Amtrack</a></b> &mdash; Picks up from Union Station only. Take the Blue Line from ORD or Orange Line from MDW (or call Uber/Lyft). Only drops off at Illinois Terminal in downtown Champaign. Ticket prices vary and are typically higher during holidays or other busy travel periods. The train is more spacious than Peoria Charter's buses. <b><i>However,</i></b> Amtrak trains are notorious for running late (by a couple hours) or straight up cancelling trips (and you have to travel all the way to downtown). Proceed with caution.</li>
 		<li><b><a href="https://www.greyhound.com/">Greyhound</a></b> &mdash; Picks up from Greyhound Bus Station. Take the Blue Line from ORD to Clinton Station or Orange Line followed by local bus from MDW (or call Uber/Lyft). Only drops off at Illinois Terminal in Downtown Champaign. Ticket prices vary and are typically higher during holidays or other busy travel periods.</li>
-		<li><b>Car Rental</b> &mdash; Rent a car from the company of your choice. Driving to UIUC from Chicago takes around 3 hours on average (and depends on traffic). See our <a href="https://rip.ddrillini.club/transportation-local.html">Parking</a> guide for information on parking in Champaign-Urbana.</li>
+		<li><b>Car Rental</b> &mdash; Rent a car from the company of your choice. Driving to UIUC from Chicago takes around 3 hours on average (and depends on traffic). See our <a href="https://rip.ddrillini.club/transportation-local.html">Parking</a> guide for information on parking in Champaign-Urbana. Note that you may be able to get cheaper rates by renting a car while in Champaign-Urbana</li>
 		<li><b>Carpool</b> &mdash; Many people coming to RIP travel through Chicago, so some travel plans may align! Ask around on the DDRIllini Discord to coordinate.</li>
 	      </ul>
+	      <br>
 	  <h5>From Indianapolis or St. Louis</h5>
-	  <h5>Regional Airports</h5>
+	    UIUC is roughly the same distance away from Chicago, St. Louis, and Indianapolis. You may choose to fly into St. Louis Lambert International Airport (STL) or Indianapolis International Airport (IND) instead. It's more recommended to rent a car from these locations as there's less options to get to UIUC. STL does have a Greyhound route from Civic Center. <b>Note:</b>Indianapolis is in Eastern Time whereas Champaign-Urbana is in Central Time, so please take the time difference into account when booking travel!<br>
+	    <br>
+	  <h5>Willard Airport (CMI)</h5>
+	    Very convenient but <i>very</i> expensive airport to fly into since it's so close to UIUC. Only offers flights by American Airlines to/from O'Hare (ORD) and Dallas Fort Worth (DFW).<br>
       </div>
     </div>
   </div>
