--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
         <a class="button button-primary" href="https://docs.google.com/document/d/1bGLO-b7gSlatnmhQLlwQqzi2r7Pzs9JehJFE_8YQCfc/edit?usp=sharing">Doubles Rules</a>
 
         <h6>Local Guides</h6>
-        <a class="button button-primary" href="food.html">Food!</a>
+        <a class="button button-primary" href="transportation-nonlocal.html">Getting to Champaign-Urbana</a>
         <a class="button button-primary" href="transportation-local.html">Local Transportation & Parking</a>
+	<br>
+        <a class="button button-primary" href="food.html">Food!</a>
         <a class="button button-primary" href="stuff.html">stuff to do!</a>
         <br>
         <a class="button button-primary" href="media/">media</a>
