small edits to CMI and Amtrak

--- a/transportation-nonlocal.html
+++ b/transportation-nonlocal.html
@@ -40,7 +40,7 @@
 	      <br>
 	      <a href="https://peoriacharter.com/">Peoria Charter</a> &mdash; Conveniently picks you up directly from ORD ($43) or MDW ($44). <b>Note:</b> pickups from MDW are <i>much</i> less frequent. If you're staying in Chicago before/after RIP, they also have pickups from Union Station and many suburbs. See their <a href="https://peoriacharter.com/findmystop">Find My Stop</a> for more details on pickup and drop off locations. Sometimes runs late if the bus happens to be going through Chicago during rush hour traffic.<br>
 	      <br>
-	      <a href="https://www.amtrak.com/home>Amtrak">Amtrack</a> &mdash; Picks up from Union Station only. Take the Blue Line from ORD or Orange Line from MDW (or call Uber/Lyft). Only drops off at Illinois Terminal in downtown Champaign. Ticket prices vary and are typically higher during holidays or other busy travel periods. The train is more spacious than Peoria Charter's buses. <b><i>However,</i></b> Amtrak trains are notorious for running late (by a couple hours) or straight up cancelling trips (and you have to travel all the way to downtown). Proceed with caution.<br>
+	      <a href="https://www.amtrak.com/home>Amtrak">Amtrack</a> &mdash; Picks up from Union Station only. Take the Blue Line from ORD or Orange Line from MDW (or call Uber/Lyft). Only drops off at Illinois Terminal in downtown Champaign. Ticket prices vary and are typically higher during holidays or other busy travel periods. The train is more spacious than Peoria Charter's buses. <b><i>However,</i></b> Amtrak trains are notorious for running late (by a couple hours) and has cancelled trains. Proceed with caution.<br>
 	      <br>
 	      <a href="https://www.greyhound.com/">Greyhound</a> &mdash; Picks up from Greyhound Bus Station. Take the Blue Line from ORD to Clinton Station or Orange Line followed by local bus from MDW (or call Uber/Lyft). Only drops off at Illinois Terminal in Downtown Champaign. Ticket prices vary and are typically higher during holidays or other busy travel periods.<br>
 	      <br>
@@ -52,7 +52,7 @@
 	    UIUC is roughly the same distance away from Chicago, St. Louis, and Indianapolis. You may choose to fly into St. Louis Lambert International Airport (STL) or Indianapolis International Airport (IND) instead. STL does have a Greyhound route from Civic Center, but it's better to rent a car from STL (and IND) given time constraints. <b>Note:</b> Indianapolis is in Eastern Time whereas Champaign-Urbana is in Central Time, so please take the time difference into account when booking travel!<br>
 	    <br>
 	  <h5>Willard Airport (CMI)</h5>
-	    Very convenient but <i>very</i> expensive airport to fly into since it's so close to UIUC. Only offers flights by American Airlines to/from O'Hare (ORD) and Dallas Fort Worth (DFW).<br>
+	    Very convenient but <i>very</i> expensive airport to fly into since it's so close to UIUC. Only offers flights by American Airlines.<br>
       </div>
     </div>
   </div>
