changed car rental to rental car

--- a/transportation-nonlocal.html
+++ b/transportation-nonlocal.html
@@ -44,7 +44,7 @@
 	      <br>
 	      <a href="https://www.greyhound.com/">Greyhound</a> &mdash; Picks up from Greyhound Bus Station. Take the Blue Line from ORD to Clinton Station or Orange Line followed by local bus from MDW (or call Uber/Lyft). Only drops off at Illinois Terminal in Downtown Champaign. Ticket prices vary and are typically higher during holidays or other busy travel periods.<br>
 	      <br>
-	      Car Rental &mdash; Rent a car from the company of your choice. Driving to UIUC from Chicago takes around 3 hours on average (and depends on traffic). See our <a href="https://rip.ddrillini.club/transportation-local.html">Parking</a> guide for information on parking in Champaign-Urbana. Note that you may be able to get cheaper rates by renting a car while in Champaign-Urbana.<br>
+	      Rental Car &mdash; Rent a car from the company of your choice. Driving to UIUC from Chicago takes around 3 hours on average (and depends on traffic). See our <a href="https://rip.ddrillini.club/transportation-local.html">Parking</a> guide for information on parking in Champaign-Urbana. Note that you may be able to get cheaper rates by renting a car while in Champaign-Urbana.<br>
 	      <br>
 	      Carpool &mdash; Many people coming to RIP travel through Chicago, so some travel plans may align! Ask around on the DDRIllini Discord to coordinate.<br>
 	      <br>
