added button to accommodations page

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
         <h6>Local Guides</h6>
         <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
-        <a class="button button-primary" href="transportation-local.html">Local Transportation & Parking</a>
+        <a class="button button-primary" href="accommodations.html">Staying at UIUC</a>
 	<br>
+        <a class="button button-primary" href="transportation-local.html">Local Transportation & Parking</a>
         <a class="button button-primary" href="food.html">Food!</a>
         <br>
         <a class="button button-primary" href="media/">media</a>
