adjusted button text for accommodations

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <h6>Local Guides</h6>
         <a class="button button-primary" href="transportation-nonlocal.html">Getting to UIUC</a>
-        <a class="button button-primary" href="accommodations.html">Staying at UIUC</a>
+	<a class="button button-primary" href="accommodations.html">Where to Stay</a>
 	<br>
         <a class="button button-primary" href="transportation-local.html">Local Transportation & Parking</a>
         <a class="button button-primary" href="food.html">Food!</a>
